--- a/005_pcd_platform_driver_Device_Tree_Overlays/PCDEV0.dts
+++ b/005_pcd_platform_driver_Device_Tree_Overlays/PCDEV0.dts
@@ -4,33 +4,28 @@
 /{
 	fragment@0 {
 		target = <&pcdev1>;
-		_OVERLAY_ {
+		__overlay__ {
 			status = "disabled";
 		};
 	
-
 	};
 
 	fragment@1 {
 		target = <&pcdev2>;
-		_OVERLAY_ {
+		__overlay__ {
 			status = "disabled";
-		};
-	
+		};	
 
 	};
 
 	fragment@2 {
 		target = <&pcdev3>;
-		_OVERLAY_ {
+		__overlay__ {
 			org,size = <1048>;
                 	org,device-serial-num = "PCDEV4XXXXXX";
 
 		};
 	
-
 	};
-
-
 
 };
