--- a/Burton_I2C_Arduino/Makefile
+++ b/Burton_I2C_Arduino/Makefile
@@ -1,14 +1,23 @@
 obj-m:= arduino.o
+obj-m+= arduino_Char.o
 ARCH =arm
 CROSS_COMPLIE =arm-linux-gnueabihf-
 KERN_DIR = /home/qq/workspace/ldd/source/linux_bbb_5.4/
 HOST_KERN_DIR = /lib/modules/$(shell uname -r)/build/
+ccflags-y += -std=gnu99
 
 all:
 	make ARCH=$(ARCH) CROSS_COMPILE=$(CROSS_COMPLIE) -C $(KERN_DIR) M=$(PWD) modules
 	
 clean:
-	rm arduino-i2c.dtbo
+	make ARCH=$(ARCH) CROSS_COMPILE=$(CROSS_COMPLIE) -C $(KERN_DIR) M=$(PWD) clean
+	rm -f arduino-i2c.dtbo
+	rm -f *.out
+
+host:
+	make -C $(HOST_KERN_DIR) M=$(PWD) modules
+test_Char:
+	$(CROSS_COMPLIE)gcc -o test_arduinoChar.out test_arduinoChar.c
 
 make_dtbo:
 	dtc -W no-unit_address_vs_reg  -@ -I dts -O dtb -o arduino-i2c.dtbo arduino-i2c.dts
@@ -18,4 +27,7 @@ copy-dtbo:
 
 copy-drv:
 	scp *.ko  debian@192.168.7.2:/home/debian/drivers
+
+copy-out:
+	scp *.out  debian@192.168.7.2:/home/debian/drivers
 
