--- a/007_gpio_sysfs/Makefile
+++ b/007_gpio_sysfs/Makefile
@@ -4,6 +4,7 @@ ARCH =arm
 CROSS_COMPLIE =arm-linux-gnueabihf-
 KERN_DIR = /home/qq/workspace/ldd/source/linux_bbb_5.4/
 HOST_KERN_DIR = /lib/modules/$(shell uname -r)/build/
+burton_dts_path=~/workspace/ldd/source/linux_bbb_5.4/arch/arm/boot/dts
 
 all:
 	make ARCH=$(ARCH) CROSS_COMPILE=$(CROSS_COMPLIE) -C $(KERN_DIR) M=$(PWD) modules
@@ -13,9 +14,18 @@ help:
 	make ARCH=$(ARCH) CROSS_COMPILE=$(CROSS_COMPLIE) -C $(KERN_DIR) M=$(PWD) help
 host:
 	make -C $(HOST_KERN_DIR) M=$(PWD) modules
+
+make_dtb: 
+	cp -f *E007* ~/workspace/ldd/source/linux_bbb_5.4/arch/arm/boot/dts/
+	cd ~/workspace/ldd/source/linux_bbb_5.4; pwd
+	cd ~/workspace/ldd/source/linux_bbb_5.4; make ARCH=arm CROSS_COMPILE=arm-linux-gnueabihf- am335x-boneblack-wireless-E007.dtb
+	cp $(burton_dts_path)/am335x-boneblack-wireless-E007.dtb ./
+
 copy-dtb:
-	scp /home/qq/workspace/ldd/source/linux_bbb_5.4/arch/arm/boot/dts/am335x-boneblack-wireless-E005.dtb debian@192.168.7.2:/home/debian/drivers
+	scp /home/qq/workspace/ldd/source/linux_bbb_5.4/arch/arm/boot/dts/am335x-boneblack-wireless-E007.dtb debian@192.168.7.2:/home/debian/drivers
 
 copy-drv:
 	scp *.ko  debian@192.168.7.2:/home/debian/drivers
+
+
 
