--- a/Burton_I2C_Arduino/Makefile
+++ b/Burton_I2C_Arduino/Makefile
@@ -5,8 +5,10 @@ CROSS_COMPLIE =arm-linux-gnueabihf-
 KERN_DIR = /home/qq/workspace/ldd/source/linux_bbb_5.4/
 HOST_KERN_DIR = /lib/modules/$(shell uname -r)/build/
 ccflags-y += -std=gnu99
+ccflags-y += -Wno-declaration-after-statement
 
 all:
+	echo $(ccflags-y)
 	make ARCH=$(ARCH) CROSS_COMPILE=$(CROSS_COMPLIE) -C $(KERN_DIR) M=$(PWD) modules
 	
 clean:
